# Programming_dotfiles.bootstrap

./: .env.dev.example  .envrc  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .vault_pass_example.py  CONTRIBUTING.md  Dockerfile  Dockerfile.ci  LICENSE  Makefile  README.md  ansible.cfg  dotfiles.yml  hosts.ini  mypy.ini  pixi.toml  pyproject.toml  requirements.yml  setup.cfg  tasks.py  taskserver.yml  test.yml
group_vars/: all.yaml
group_vars/creamsoda/: vars.yml
group_vars/pepper/: vars.yml  vault
group_vars/salt/: vars.yml  vault
group_vars/windows/: vars.yml  vault
host_vars/MikhailLermontov/: vars.yml  vault
roles/applied_maths_scoop_bucket/tasks/: main.yaml
roles/apt/defaults/: main.yml
roles/apt/tasks/: main.yml
roles/ast_grep/tasks/: main.yml
roles/bat/tasks/: main.yaml
roles/broot/files/: conf.hjson
roles/broot/tasks/: main.yaml
roles/bugwarrior/tasks/: main.yml
roles/buttery_taskbar/tasks/: main.yaml
roles/docker/tasks/: enable_rootless_mode.yml  main.yml
roles/docker/vars/: main.yml
roles/dotnet_framework_3-5/meta/: main.yaml
roles/dotnet_framework_3-5/tasks/: main.yaml
roles/drawio/tasks/: main.yml
roles/filesystem/meta/: main.yml
roles/filesystem/tasks/: salt.yml
roles/filesystem/vars/: main.yml
roles/fonts/tasks/: main.yaml
roles/frescobaldi/meta/: main.yaml
roles/frescobaldi/tasks/: main.yaml
roles/golang/defaults/: main.yml
roles/golang/meta/: main.yml
roles/golang/tasks/: main.yml
roles/im_select/tasks/: main.yaml
roles/info_field_chrono_index/meta/: main.yml
(+83 files in other folders)
