[metadata]
name = MlOps_course__Tasks
description = Tasks made during MlOps course
version = 0.1.0
author = DeadlySquad13
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.10.0

[options]
packages = find:
install_requires =
python_requires = >=3.9
package_dir =
    =src
zip_safe = no

[options.packages.find]
where=src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9

[options.package_data]
find = py.typed

[flake8]
max-line-length = 100

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
